boreal/tests/assets/invalid_files/parsing/jump_too_big_in_alternation.yar
rule a {
    strings:
        $a = { ( CD | AB [0-201] 85 ) }
    condition:
        $a
}
